positionement image pour ipad

--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -100,6 +100,8 @@ font-family: "titilingBd";
   font-family: "titilingBd";
   color:white;
   background-color: #6d973e;
+  top: -35px;
+  right: 0;
 }
 
 
